# Minimal-k-Isomorphic-Subgraph-Extension

./: Cargo.toml  README.md  home_boy_giga_script.bat  home_boy_script.ps1
examples/: example1.txt  example2.txt  example3.txt  example4_6x8.txt  example4_multigraph.txt  example5_8x13.txt  example5_complex.txt  example6_10x25.txt  example7_extreme.txt  example8_65x100.txt  example8_monster.txt
examples/generated_benchmarks/: generated_10_100.txt  generated_10_12.txt  generated_10_13.txt  generated_10_14.txt  generated_10_15.txt  generated_10_16.txt  generated_10_17.txt  generated_10_18.txt  generated_10_19.txt  generated_10_20.txt  generated_10_21.txt  generated_10_22.txt  generated_10_23.txt  generated_10_24.txt  generated_10_25.txt  generated_10_26.txt  generated_10_27.txt  generated_10_28.txt  generated_10_29.txt  generated_10_30.txt  generated_10_31.txt  generated_10_32.txt  generated_10_33.txt  generated_10_34.txt  generated_10_35.txt  generated_10_36.txt  generated_10_37.txt  generated_10_38.txt  generated_10_39.txt  generated_10_40.txt  generated_10_41.txt  generated_10_42.txt  generated_10_43.txt  generated_10_44.txt  generated_10_45.txt  generated_10_46.txt  generated_10_47.txt  generated_10_48.txt  generated_10_49.txt  generated_10_50.txt  (+138 more)
scripts/: plot_approx_runtime_vs_n2.py  plot_runtime_vs_n2.py
src/: cost.rs  lib.rs  mapping.rs  parser.rs  utils.rs
