[package]
name = "minimal-k-isomorphic-subgraph-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
itertools = "0.13"
nom = "7.1"
rayon = "1.10"

[[bin]]
name = "exact-solver"
path = "src/bin/exact_solver.rs"

[[bin]]
name = "approx-solver"
path = "src/bin/approx_solver.rs"
