[package]
name = "minimal-k-isomorphic-subgraph-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
itertools = "0.13"
nom = "7.1"
rand = "0.8"
rayon = "1.10"
ratatui = "0.29"
crossterm = "0.28"

[[bin]]
name = "solver"
path = "src/bin/solver.rs"

[[bin]]
name = "input-generator"
path = "src/bin/input_generator.rs"
